<resources>
    <!-- Name for the application [CHAR LIMIT=20] -->
    <string name="app_name">Inventory Manager</string>

    <!-- Title for the activity to add a new product [CHAR LIMIT=25] -->
    <string name="editor_activity_title_new_product">Add new Product</string>

    <!-- Title for the activity to edit an existing product [CHAR LIMIT=25] -->
    <string name="editor_activity_title_edit_product">Edit Product</string>

    <!-- Title for the delete all menu item [CHAR LIMIT=25] -->
    <string name="action_delete_all">Delete All</string>

    <!-- Toast message in editor when new product has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_product_successful">Product saved</string>

    <!-- Toast message in editor when new product has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_product_failed">Error with saving product</string>

    <!-- Toast message in editor when current product was successfully updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_product_successful">Product updated</string>

    <!-- Toast message in editor when current product has failed to be updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_product_failed">Error with updating product</string>

    <!-- Toast message in editor when current product was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_product_successful">Product deleted</string>

    <!-- Toast message in editor when current product has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_product_failed">Error with deleting product</string>

    <!-- Label for editor menu option to save product and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current product [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Label for the button that decreases the quantity of current product by one in the list view[CHAR LIMIT=20] -->
    <string name="action_sale">Sale</string>

    <!-- Label for the button that sends an intent to either a phone app or an email app[CHAR LIMIT=20] -->
    <string name="action_order">Order more</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current product [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Dialog message to ask the user to confirm deleting the current product [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this product?</string>

    <!-- Label for add photo button [CHAR LIMIT=NONE] -->
    <string name="label_add_photo">Add product photo</string>

    <!-- Dialog button text for the option to confirm deleting the current product [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current product [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <!-- Title text for the empty view [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">Nothing inserted.</string>

    <!-- Subtitle text for the empty view that prompts the user to add a product [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding a product.</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_overview">Overview</string>

    <!-- Label for quantity information in the editor [CHAR LIMIT=30] -->
    <string name="category_quantity">Quantity</string>

    <!-- Label for image information in the editor [CHAR LIMIT=30] -->
    <string name="category_image">Image</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_name">Product Name</string>

    <!-- Text hint for price field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_price">Price</string>

    <!-- Plus sign for increase button [CHAR LIMIT=5] -->
    <string name="increase">+</string>

    <!-- Plus sign for decrease button [CHAR LIMIT=5] -->
    <string name="decrease">-</string>

    <!-- Initial quantity equal to zero [CHAR LIMIT=5] -->
    <string name="initial_quantity">0</string>

    <!-- Initial quantity changer equal to one [CHAR LIMIT=5] -->
    <string name="initial_quantity_changer">1</string>

    <!-- Label for the product's price if the price is empty [CHAR LIMIT=20] -->
    <string name="no_price">No price provided.</string>

    <!-- Label for the product's price in a list item [CHAR LIMIT=20] -->
    <string name="label_price_helper">Price:&#160;</string>

    <!-- Label for the product's quantity in a list item [CHAR LIMIT=20] -->
    <string name="label_quantity_helper">Quantity:&#160;</string>

    <!-- Text for changing the quantity value [CHAR LIMIT=NONE] -->
    <string name="text_change_quantity">Change quantity by: </string>

</resources>
