<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_margin_small">

        <TextView
            android:id="@+id/textView2"
            style="@style/CategoryStyle"
            android:text="@string/category_overview" />

        <EditText
            android:id="@+id/edit_product_name"
            style="@style/EditorFieldStyle"
            android:hint="@string/hint_product_name"
            android:inputType="textCapWords" />

        <EditText
            android:id="@+id/edit_product_price"
            style="@style/EditorFieldStyle"
            android:hint="@string/hint_product_price"
            android:inputType="number" />

        <TextView
            android:id="@+id/textView"
            style="@style/CategoryStyle"
            android:text="@string/category_quantity" />

        <EditText
            android:id="@+id/edit_product_quantity"
            style="@style/EditorFieldStyle"
            android:layout_width="wrap_content"
            android:inputType="number"
            android:text="@string/initial_quantity" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/text_change_quantity" />

            <EditText
                android:id="@+id/change_quantity"
                style="@style/EditorFieldStyle"
                android:layout_width="wrap_content"
                android:inputType="number"
                android:text="@string/initial_quantity_changer" />

            <Button
                android:id="@+id/plus_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/increase" />

            <Button
                android:id="@+id/minus_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/decrease" />

        </LinearLayout>

        <Button
            android:id="@+id/orderButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="4dp"
            android:text="@string/action_order" />

        <TextView
            android:id="@+id/textView3"
            style="@style/CategoryStyle"
            android:text="@string/category_image" />

        <Button
            android:id="@+id/add_image_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/label_add_photo" />

        <ImageView
            android:id="@+id/add_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/activity_margin_very_small"
            android:scaleType="centerCrop" />

    </LinearLayout>
</ScrollView>
